# curl_to_kodi

./: .cz.yaml  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: bumpversion.yml
src/: curl_to_kodi.py
src/curl_to_kodi/: cli.py
tests/: test_curl_to_kodi.py
