[project]
name = "curl-to-kodi"
version = "0.1.0"
description = "Convert curl command lines to Kodi .strm files and yt-dlp scripts"
authors = [{name = "mr-july"}]
requires-python = ">=3.8"
dependencies = [
    "pyperclip>=1.8.2"
]

[project.scripts]
curl-to-kodi = "src.curl_to_kodi:main"

[tool.uv]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
